--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,8 +134,14 @@ body {
     display: grid;
     min-height: 1vh;
     grid-template-columns: 250px 1fr;
-    grid-template-rows: 75px 80px minmax(100vh, 1fr) 50px;
+    grid-template-rows: 75px 80px minmax(calc(100vh - 205px), 1fr) 50px;
 }
+
+/* ***************** */
+/*                   */
+/*       Header      */
+/*                   */
+/* ***************** */
 
 header {
     grid-area: 1 / 2 / 2 / 3;
@@ -168,6 +174,7 @@ header ul,
 
     position: sticky;
     top: 0;
+    z-index: 2;
 }
 
 #welcome a {
@@ -177,11 +184,193 @@ header ul,
     background-color: transparent;
 }
 
+/* ***************** */
+/*                   */
+/*        MAIN       */
+/*                   */
+/* ***************** */
+
 main {
     background-color: lightgray;
     grid-area: 3 / 2 / 4 / 3;
-    height: 400vh;
+
+    display: grid;
+    gap: 30px;
+    grid-template-columns: 2fr 1fr;
+
+    padding: 30px;
 }
+
+.container {
+    /* background-color: red; */
+    grid-column: 1/2;
+}
+
+.articles {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-rows: 250px;
+    grid-auto-rows: 250px;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.project {
+    width: 100%;
+    height: 100%;
+    position: relative;
+
+    border-radius: 10px;
+    border: 5px solid black;
+
+    overflow: hidden;
+    background-color: white;
+    color: white;
+}   
+
+.bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: all 0.4s;
+    background-size: contain;;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.layer {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: all 0.4s;
+    background-color: #3b83f67a;
+    filter: brightness(60%);
+}
+
+.project:hover .layer {
+    display: block;
+}
+
+.project:hover .bg {
+    transition: all 0.4s;
+    transform: scale(1.1);
+}
+
+.description {
+    color: black;
+    position: absolute;
+    width: 100%;
+    top: 80%;
+    left: 0;
+    padding: 20px 10px 5px;
+    transition: all 0.4s ease;
+}
+
+.description * {
+    visibility: hidden;
+}
+
+.description h3 {
+    visibility: visible;
+}
+
+.project:hover .description {
+    top: unset;
+    color: white;
+    bottom: -15px;
+    transform: translateY(-10px);
+    box-shadow: rgba(0, 0, 0, 0.618) 0px -100px 36px -28px inset;
+    transition: all 0.4s ease;
+}
+
+.project:hover .description *{
+    visibility: visible;
+}
+
+
+.bg-1 {
+    background-image: url('/assets/images/project-facebook.webp');
+}
+
+.board {
+    grid-column: 2/3;
+}
+
+.board div h3, .container > h3 {
+    margin: 10px 0px;
+}
+
+
+
+.announcement {
+}
+
+.card {
+    padding: 1rem 1.7rem;
+    background-color: white;
+    margin-bottom: 5px;
+    border-radius: 10px;
+}
+
+.card-item {
+    margin: 10px 0px;
+}
+
+p {
+    font-size: 0.75rem;
+}
+
+.bar {
+    display: block;
+    position: relative;
+    left: -5%;
+    width: 110%;
+    margin: 15px 0 20px 0;
+    border-bottom: 2px solid grey;
+}
+.trending .card {
+    padding: 1rem;
+}
+
+.card-item2 {
+    display: grid;
+    grid-template-columns: 2fr 5fr;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 5px;
+    row-gap: 2px;
+
+    margin: 15px 0 10px;
+}
+
+.card-item2 img {
+    grid-area: 1 / 1 / 3 / 2;
+    align-self: center;
+    justify-self: center;
+
+    background-color: red;
+    width: 70%;
+    aspect-ratio: 1 / 1;
+    padding: 5px;
+    border-radius: 50%; /* Makes the image circular */
+    object-fit: contain; /
+}
+
+.card-item2 h5 {
+    align-self: flex-end;
+}
+
+.card-item2 span {
+    align-self: flex-start;
+    font-size: 0.8rem;
+}
+
+/* ***************** */
+/*                   */
+/*      SIDEBAR      */
+/*                   */
+/* ***************** */
 
 aside {
     background-color: #3b82f6;
@@ -230,6 +419,12 @@ aside > div ul {
     flex-direction: column;
     gap: 15px;
 }
+
+/* ***************** */
+/*                   */
+/*       FOOTER      */
+/*                   */
+/* ***************** */
 
 footer {
     background-color: lightgray;
