--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,7 +345,6 @@ main {
 
 .announcement {
 }
-
 .card {
     max-height: 250px;
     overflow-y: scroll;
@@ -357,7 +356,32 @@ main {
     display: grid;
     grid-column: 1fr;
     gap: 5px;
+
+    /* To avoid the scrollbar extending outside the card */
+    position: relative;
 }
+
+.card::-webkit-scrollbar {
+    width: 0.3em;
+    border-radius: 10px; /* Match the card border-radius */
+    margin: 10px 0px;
+}
+
+.card::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px; /* Match the card border-radius */
+    margin: 10px 0px;
+
+}
+
+.card::-webkit-scrollbar-thumb {
+    background-color: var(--font-color);
+    outline: 1px solid #333333;
+    border-radius: 10px; /* Match the card border-radius */
+    margin: 10px 0px;
+
+}
+
 
 .card-item {
     margin: 10px 0px;
